[tool.poetry]
name = "chat_with_repo"
version = "0.1.0"
description = ""
authors = ["Ambuj Pawar"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.150"
openai = "^0.27.4"
beautifulsoup4 = "^4.12.2"
python-dotenv = "^1.0.0"
tiktoken = "^0.3.3"
faiss-cpu = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pre-commit = "^3.2.0"
isort = "^5.10.1"
black = "^22.1.0"
mypy = "^0.931"
flake8 = "^4.0.1"

[tool.poetry.group.dev.dependencies]
loguru = "^0.7.0"

[tool.black]
# https://github.com/psf/black
target-version = ["py39"]
line-length = 120

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 39
line_length = 120
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4


[tool.mypy]
disallow_any_generics = true
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
